menu and desing end

--- a/index.html
+++ b/index.html
@@ -148,59 +148,59 @@
 			                <li>Menu
 			                    <div class="mega-menu">
 			                        <div class="inner-mega-menu">
-			                        	<h3>NOSOTROS:</h3>
+			                        	<h4>NOSOTROS:</h4>
 
-			                            <p > <i class="fa fa-home"> </i> Inicio </p>
-			                            <p> <i class="fa fa-building"> </i> Sedes</p>
-			                            <p><i class="fa fa-hospital-o"> </i> Entidad</p>
-			                            <p><i class="fa fa-address-card"></i> Directorio Funcionarios</p>
-			                            <p> <i class="fa fa-address-book-o"></i> Directorio Institucional</p>
-			                            <p> <i class="fa fa-history"></i> Procesos y procedimientos</p>
-			                            <p> <i class="fa fa-envelope-open"></i> Correo Interno</p>
+			                            <p> <i class="fa fa-home"> </i><a href="index.html"> | Inicio</a> </p>
+			                            <p> <i class="fa fa-building"> </i><a href="consultaEntrada.php?idTipoEntrada=1"> | Sedes</a></p>
+			                            <p><i class="fa fa-hospital-o"> </i><a href="consultaEntrada.php?idTipoEntrada=2"> | Entidad</a></p>
+			                            <p><i class="fa fa-address-card"></i><a href="consultaEntrada.php?idTipoEntrada=3"> | Directorio Funcionarios</a></p>
+			                            <p><i class="fa fa-address-book-o"></i><a href="consultaEntrada.php?idTipoEntrada=4"> | Directorio Institucional</a></p>
+			                            <p><i class="fa fa-history"></i><a href="consultaEntrada.php?idTipoEntrada=5"> | Procesos y procedimientos</a></p>
+			                            <p><i class="fa fa-envelope-open"></i><a href="consultaEntrada.php?idTipoEntrada=6"> | Correo Interno</a></p>
 			                        </div>
 			                        <div class="inner-mega-menu">
-			                             <h3>Infórmate:</h3>
-					          			<p > <i class="fa fa-newspaper-o"> </i> Noticias</p>
-							          <p > <i class="fa fa-database"> </i> Datos Abiertos</p>
-							          <p > <i class="fa fa-globe"> </i> Convocatorias</p>
-							          <p > <i class="fa fa-question-circle-o"> </i> Preguntas y respuestas</p>
-							          <p > <i class="fa fa-flag-checkered"> </i> Metas, Objetivos e indicadores</p>
-							          <p > <i class="fa fa-user-plus"> </i> Ofertas de empleo</p>
-							          <p > <i class="fa fa-gamepad"> </i> Control</p>
-							          <p > <i class="fa fa-info-circle"> </i> Información Adicional</p>
-							          <p > <i class="fa fa-users"> </i> Población Vulnerable</p>
-							          <p > <i class="fa fa-language"> </i> Glosario</a>
-							          <p > <i class="fa fa-handshake-o"> </i> Contrataciones</p>
-							          <p > <i class="fa fa-flash"> </i> Ejecución de contratos</p>
+			                             <h4>Infórmate:</h4>
+					          			<p> <i class="fa fa-newspaper-o"> </i><a href="consultaEntrada.php?idTipoEntrada=7"> | Noticias</a></p>
+							          <p> <i class="fa fa-database"> </i><a href="consultaEntrada.php?idTipoEntrada=7"> | Datos Abiertos</a></p>
+							          <p> <i class="fa fa-globe"> </i><a href="consultaEntrada.php?idTipoEntrada=8"> | Convocatorias</a></p>
+							          <p> <i class="fa fa-question-circle-o"> </i><a href="consultaEntrada.php?idTipoEntrada=9"> | Preguntas y respuestas</a></p>
+							          <p> <i class="fa fa-flag-checkered"> </i><a href="consultaEntrada.php?idTipoEntrada=10"> | Metas, Objetivos e indicadores</a></p>
+							          <p> <i class="fa fa-user-plus"> </i><a href="consultaEntrada.php?idTipoEntrada=11"> | Ofertas de empleo</a></p>
+							          <p> <i class="fa fa-gamepad"> </i><a href="consultaEntrada.php?idTipoEntrada=12"> | Control</a></p>
+							          <p> <i class="fa fa-info-circle"> </i><a href="consultaEntrada.php?idTipoEntrada=13"> | Información Adicional</a></p>
+							          <p> <i class="fa fa-users"> </i><a href="consultaEntrada.php?idTipoEntrada=14"> | Población Vulnerable</a></p>
+							          <p> <i class="fa fa-language"> </i><a href="consultaEntrada.php?idTipoEntrada=15"> | Glosario</a></p>
+							          <p> <i class="fa fa-handshake-o"> </i><a href="consultaEntrada.php?idTipoEntrada=16"> | Contrataciones</a></p>
+							          <p> <i class="fa fa-flash"> </i><a href="consultaEntrada.php?idTipoEntrada=7"> | Ejecución de contratos</a></p>
 			                        </div>
 			                        <div class="inner-mega-menu">
-			                           	<h3>Documentos:</h3>
-								          <p > <i class="fa fa-folder-open-o"> </i> Rendición de cuentas</p>
-								          <p > <i class="fa fa-file-text-o"> </i> Informes</p>
-								          <p > <i class="fa fa-bar-chart"> </i> Estudios e investigaciones</p>
-								          <p > <i class="fa fa-cogs"> </i> Proyectos en ejecución</p>
-								          <p > <i class="fa fa-file-archive-o"> </i> Informes de PQRS</p>
-								          <p > <i class="fa fa-list"> </i> Normatividad</p>
-								          <p > <i class="fa fa-clone"> </i> Políticas y lineamientos</p>
-								          <p > <i class="fa fa-cubes"> </i> Planes</p>
-								          <p > <i class="fa fa-desktop"> </i> Programas</p>
-								          <p > <i class="fa fa-money"> </i> Presupuesto</p>
+			                           	<h4>Documentos:</h4>
+								          <p> <i class="fa fa-folder-open-o"> </i><a href="consultaEntrada.php?idTipoEntrada=16">  | Rendición de cuentas</a></p>
+								          <p> <i class="fa fa-file-text-o"> </i><a href="consultaEntrada.php?idTipoEntrada=17">  | Informes</a></p>
+								          <p> <i class="fa fa-bar-chart"> </i><a href="consultaEntrada.php?idTipoEntrada=18">  | Estudios e investigaciones</a></p>
+								          <p> <i class="fa fa-cogs"> </i><a href="consultaEntrada.php?idTipoEntrada=19">  | Proyectos en ejecución</a></p>
+								          <p> <i class="fa fa-file-archive-o"><a href="consultaEntrada.php?idTipoEntrada=20">  </i> | Informes de PQRS</a></i>
+								          <p> <i class="fa fa-list"> </i><a href="consultaEntrada.php?idTipoEntrada=21">  | Normatividad</a></p>
+								          <p> <i class="fa fa-clone"> </i><a href="consultaEntrada.php?idTipoEntrada=22">  | Políticas y lineamientos</a></p>
+								          <p> <i class="fa fa-cubes"> </i><a href="consultaEntrada.php?idTipoEntrada=23">  | Planes</a></p>
+								          <p> <i class="fa fa-desktop"> </i><a href="consultaEntrada.php?idTipoEntrada=24">  | Programas</a></p>
+								          <p> <i class="fa fa-money"> </i><a href="consultaEntrada.php?idTipoEntrada=25">  | Presupuesto</a></p>
 			                        </div>
 			                        <div class="inner-mega-menu">
-			                            <h3>Participa:</h3>
-								          <p > <i class="fa fa-calendar"> </i> Calendario de Actividades</p>
-								          <p > <i class="fa fa-anchor"> </i> Retos de participacón</p>
-								          <p > <i class="fa fa-check-square-o"> </i> Encuesta</p>
-								          <p > <i class="fa fa-bullhorn"> </i> Instancias de Participación</p>
+			                            <h4>Participa:</h4>
+								          <p> <i class="fa fa-calendar"> </i><a href="consultaEntrada.php?idTipoEntrada=26">  | Calendario de Actividades</a></p>
+								          <p> <i class="fa fa-anchor"> </i><a href="consultaEntrada.php?idTipoEntrada=27">  | Retos de participacón</a></p>
+								          <p> <i class="fa fa-check-square-o"></i><a href="consultaEntrada.php?idTipoEntrada=28"> | Encuesta</a></P>
+								          <p> <i class="fa fa-bullhorn"> </i><a href="consultaEntrada.php?idTipoEntrada=29">  | Instancias de Participación</a></p>
 			                        </div> 
 			                        <div class="inner-mega-menu">
-			                        	<h3>Atención Ciudadana: </h3>
-								          <p > <i class="fa fa-floppy-o"> </i> Transparencia y acceso</p>
-								          <p > <i class="fa fa-files-o"> </i> Tramites y servicios</p>
-								          <p > <i class="fa fa-binoculars"> </i> Mecanismos de control</p>
-								          <p > <i class="fa fa-globe"> </i> Transparencia</p>
-								          <p > <i class="fa fa-cube"> </i> Recepción de solicitudes</p>
-								          <p > <i class="fa fa-user-secret"> </i> Política y protección de datos</p>
+			                        	<h4>Atención Ciudadana: </h4>
+								          <p> <i class="fa fa-floppy-o"> </i><a href="consultaEntrada.php?idTipoEntrada=30">  | Transparencia y acceso</a></p>
+								          <p> <i class="fa fa-files-o"> </i><a href="consultaEntrada.php?idTipoEntrada=31">  | Tramites y servicios</a></p>
+								          <p> <i class="fa fa-binoculars"> </i><a href="consultaEntrada.php?idTipoEntrada=32">  | Mecanismos de control</a></p>
+								          <p> <i class="fa fa-globe"> </i><a href="consultaEntrada.php?idTipoEntrada=33">  | Transparencia</a></p>
+								          <p> <i class="fa fa-cube"> </i><a href="consultaEntrada.php?idTipoEntrada=34">  | Recepción de solicitudes</a></p>
+								          <p> <i class="fa fa-user-secret"> </i><a href="consultaEntrada.php?idTipoEntrada=35">  | Política y protección de datos</a></p>
 			                        </div>
 			                    </div>
 			                </li>
