--- a/nuevaEntrada.html
+++ b/nuevaEntrada.html
@@ -81,87 +81,75 @@
 						</div>
 					</div>
 				</div>
-				<div class="header_nav" id="header_nav_pin">
-					<nav class="navbar navbar-expand-lg navbar-light megamenuback">
-					    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
-										<span class="navbar-toggler-icon"></span>
-							  </button>
-					    <div class="collapse navbar-collapse mega-dropdown " id="navbar" >
-					     <ul class="navbar-nav mr-auto">
-					      <li class="nav-item dropdown megamenu-li">
-					       <a class="nav-link dropdown-toggle" href="" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menú</a>
-					       <div class="dropdown-menu megamenu dropdown-Megamenu" aria-labelledby="dropdown01" style="overflow: auto;">
-					        <div class="row">
-					         <div class="col-sm-6 col-lg-3">
-					          <h5>Nosotros</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="index.html">Inicio</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="sedes.html">Sedes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="entidad.html">Entida</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="directorioFuncionarios.html">Directorio Funcionarios</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="directorioInstitucional.html">Directorio Institucional</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="proceso.html">Procesos y Procedimientos</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="#">Correo Interno</a>
-					         </div>
-					         <div class="col-sm-6 col-lg-3">
-					          <h5>Infórmate</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="noticias.html">Noticias</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="datosAbiertos.html">Datos Abiertos</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="convocatorias.html">Convocatorias</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="pqr.html">Preguntas y respuestas</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="metas.html">Metas, Objetivos e indicadores</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="ofertasEmpleo.html">Ofertas de empleo</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="control.html">Control</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="informacionAdicional.html">Información Adicional</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="poblacionVulnerable.html">Población Vulnerable</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="glosario.html">Glosario</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="contrataciones.html">Contrataciones</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="ejecucionContratos.html">Ejecución de contratos</a>
-					         </div>
-							 <div class="col-sm-6 col-lg-3">
-					          <h5>Documentos</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="rendicionCuentas.html">Rendición de cuentas</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="informes.html">Informes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="estudios.html">Estudios e investigaciones</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="proyectos.html">Proyectos en ejecución</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="informePqr.html">Informes de PQRS</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="normatividad.html">Normatividad</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="politicas.html">Políticas y lineamientos</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="planes.html">Planes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="programas.html">Programas</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="presupuesto.html">Presupuesto</a>
-					         </div>
-							 <div class="col-sm-6 col-lg-3">
-					          <h5>Participa</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="calendario.html">Calendario de Actividades</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="ninosNinasAdolecentes.html">Niños, Niñas y Adolecentes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="retos.html">Retos de participacón</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="encuesta.html">Encuesta</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="instanciasParticipacion.html">Instancias de Participación</a>
-					         </div>
-					          <div class="col-sm-6 col-lg-3">
-					          <h5>Atención Ciudadana</h5>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="transparenciaAcceso.html">Transparencia y acceso</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="tramites.html">Tramites y servicios</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="mecanismos.html">Mecanismos de control</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="transparencia.html">Transparencia</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="solicitudes.html">Recepción de solicitudes</a>
-					          <a class="dropdown-item dropdown-item-mgmenu" href="proteccionDatos.html">Política y protección de datos</a>
-					         </div>
-					        </div>
-					       </div>
-					      </li>
-					     </ul>
-					     <div class="search_content d-flex flex-row align-items-center justify-content-end ml-auto">
-							<form action="#" id="search_container_form" class="search_container_form">
-								<input type="text" class="search_container_input" placeholder="Consultar" required="required">
-								<button class="search_container_button"><i class="fa fa-search" aria-hidden="true"></i></button>
-							</form>
-						</div>
-					    </div>
+				<div class="header_nav" id="header_nav_pin">	
+			        <nav class="nav-bar">
+			        	<span class="fi-monitor"></span>
+			            <ul>
+			                <li>Menu
+			                    <div class="mega-menu">
+			                        <div class="inner-mega-menu">
+			                        	<h4>NOSOTROS:</h4>
 
-					   </nav>	
-			</div>
+			                            <p> <i class="fa fa-home"> </i><a href="index.html"> | Inicio</a> </p>
+			                            <p> <i class="fa fa-building"> </i><a href="consultaEntrada.php?idTipoEntrada=1"> | Sedes</a></p>
+			                            <p><i class="fa fa-hospital-o"> </i><a href="consultaEntrada.php?idTipoEntrada=2"> | Entidad</a></p>
+			                            <p><i class="fa fa-address-card"></i><a href="consultaEntrada.php?idTipoEntrada=3"> | Directorio Funcionarios</a></p>
+			                            <p><i class="fa fa-address-book-o"></i><a href="consultaEntrada.php?idTipoEntrada=4"> | Directorio Institucional</a></p>
+			                            <p><i class="fa fa-history"></i><a href="consultaEntrada.php?idTipoEntrada=5"> | Procesos y procedimientos</a></p>
+			                            <p><i class="fa fa-envelope-open"></i><a href="consultaEntrada.php?idTipoEntrada=6"> | Correo Interno</a></p>
+			                        </div>
+			                        <div class="inner-mega-menu">
+			                             <h4>Infórmate:</h4>
+					          			<p> <i class="fa fa-newspaper-o"> </i><a href="consultaEntrada.php?idTipoEntrada=7"> | Noticias</a></p>
+							          <p> <i class="fa fa-database"> </i><a href="consultaEntrada.php?idTipoEntrada=7"> | Datos Abiertos</a></p>
+							          <p> <i class="fa fa-globe"> </i><a href="consultaEntrada.php?idTipoEntrada=8"> | Convocatorias</a></p>
+							          <p> <i class="fa fa-question-circle-o"> </i><a href="consultaEntrada.php?idTipoEntrada=9"> | Preguntas y respuestas</a></p>
+							          <p> <i class="fa fa-flag-checkered"> </i><a href="consultaEntrada.php?idTipoEntrada=10"> | Metas, Objetivos e indicadores</a></p>
+							          <p> <i class="fa fa-user-plus"> </i><a href="consultaEntrada.php?idTipoEntrada=11"> | Ofertas de empleo</a></p>
+							          <p> <i class="fa fa-gamepad"> </i><a href="consultaEntrada.php?idTipoEntrada=12"> | Control</a></p>
+							          <p> <i class="fa fa-info-circle"> </i><a href="consultaEntrada.php?idTipoEntrada=13"> | Información Adicional</a></p>
+							          <p> <i class="fa fa-users"> </i><a href="consultaEntrada.php?idTipoEntrada=14"> | Población Vulnerable</a></p>
+							          <p> <i class="fa fa-language"> </i><a href="consultaEntrada.php?idTipoEntrada=15"> | Glosario</a></p>
+							          <p> <i class="fa fa-handshake-o"> </i><a href="consultaEntrada.php?idTipoEntrada=16"> | Contrataciones</a></p>
+							          <p> <i class="fa fa-flash"> </i><a href="consultaEntrada.php?idTipoEntrada=7"> | Ejecución de contratos</a></p>
+			                        </div>
+			                        <div class="inner-mega-menu">
+			                           	<h4>Documentos:</h4>
+								          <p> <i class="fa fa-folder-open-o"> </i><a href="consultaEntrada.php?idTipoEntrada=16">  | Rendición de cuentas</a></p>
+								          <p> <i class="fa fa-file-text-o"> </i><a href="consultaEntrada.php?idTipoEntrada=17">  | Informes</a></p>
+								          <p> <i class="fa fa-bar-chart"> </i><a href="consultaEntrada.php?idTipoEntrada=18">  | Estudios e investigaciones</a></p>
+								          <p> <i class="fa fa-cogs"> </i><a href="consultaEntrada.php?idTipoEntrada=19">  | Proyectos en ejecución</a></p>
+								          <p> <i class="fa fa-file-archive-o"><a href="consultaEntrada.php?idTipoEntrada=20">  </i> | Informes de PQRS</a></i>
+								          <p> <i class="fa fa-list"> </i><a href="consultaEntrada.php?idTipoEntrada=21">  | Normatividad</a></p>
+								          <p> <i class="fa fa-clone"> </i><a href="consultaEntrada.php?idTipoEntrada=22">  | Políticas y lineamientos</a></p>
+								          <p> <i class="fa fa-cubes"> </i><a href="consultaEntrada.php?idTipoEntrada=23">  | Planes</a></p>
+								          <p> <i class="fa fa-desktop"> </i><a href="consultaEntrada.php?idTipoEntrada=24">  | Programas</a></p>
+								          <p> <i class="fa fa-money"> </i><a href="consultaEntrada.php?idTipoEntrada=25">  | Presupuesto</a></p>
+			                        </div>
+			                        <div class="inner-mega-menu">
+			                            <h4>Participa:</h4>
+								          <p> <i class="fa fa-calendar"> </i><a href="consultaEntrada.php?idTipoEntrada=26">  | Calendario de Actividades</a></p>
+								          <p> <i class="fa fa-anchor"> </i><a href="consultaEntrada.php?idTipoEntrada=27">  | Retos de participacón</a></p>
+								          <p> <i class="fa fa-check-square-o"></i><a href="consultaEntrada.php?idTipoEntrada=28"> | Encuesta</a></P>
+								          <p> <i class="fa fa-bullhorn"> </i><a href="consultaEntrada.php?idTipoEntrada=29">  | Instancias de Participación</a></p>
+			                        </div> 
+			                        <div class="inner-mega-menu">
+			                        	<h4>Atención Ciudadana: </h4>
+								          <p> <i class="fa fa-floppy-o"> </i><a href="consultaEntrada.php?idTipoEntrada=30">  | Transparencia y acceso</a></p>
+								          <p> <i class="fa fa-files-o"> </i><a href="consultaEntrada.php?idTipoEntrada=31">  | Tramites y servicios</a></p>
+								          <p> <i class="fa fa-binoculars"> </i><a href="consultaEntrada.php?idTipoEntrada=32">  | Mecanismos de control</a></p>
+								          <p> <i class="fa fa-globe"> </i><a href="consultaEntrada.php?idTipoEntrada=33">  | Transparencia</a></p>
+								          <p> <i class="fa fa-cube"> </i><a href="consultaEntrada.php?idTipoEntrada=34">  | Recepción de solicitudes</a></p>
+								          <p> <i class="fa fa-user-secret"> </i><a href="consultaEntrada.php?idTipoEntrada=35">  | Política y protección de datos</a></p>
+			                        </div>
+			                    </div>
+			                </li>
+			            </ul>
+			        </nav>
+				</div>
 		</header>
+
+
 
 		<div class="home_container">
 			<div class="container">
