--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 	        		<div class="container">
 	        			<div class="form-row">
 	        				<div class="col">
-	        					<form class="FormularioLogin" action="controlers/controladorInicioSesion.php" method="POST">
+	        					<form class="" method="POST">
 	        						<div class="form-group">
-	        							<input type="text" class="info_form_dep info_input" name="usuario" placeholder="Usuario">
+	        							<input type="text" class="info_form_dep info_input" name="username" placeholder="Usuario">
 	        						</div>
 	        						<div class="form-group">
-	        							<input type="password" class="info_form_dep info_input" name="contrasena" placeholder="Contraseña">
+	        							<input type="password" class="info_form_dep info_input" name="password" placeholder="Contraseña">
 	        						</div>
 	        						<div class="form-group">
 	        							<button class="info_form_button">INGRESAR</button>
